...
  },
  "coverage.sign_out": {
    "localizations": {
      "en": {
        "stringUnit": {
          "state": "translated",
          "value": "Sign out"
        }
      },
      "es": {
        "stringUnit": {
          "state": "translated",
          "value": "Salir"
...
    "auth_dialog.member.unauthorized.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unauthorized user email"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Email de usuario no autorizado"
...
    "welcome.cta.enter" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter the app"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entrar a la app"
...
